hack/seed/networking/ingressclasses.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    description: "Nginx ingress class (no controller installed)"
spec:
  controller: k8s.io/ingress-nginx
